added java parameters to mkrun in prepare script